# cargo-when

./: .clog.toml  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
src/: main.rs
