[package]
name = "cargo-when"
version = "0.1.0"
authors = ["Kathryn Long <squeeself@gmail.com>"]
description = "Cargo commands run conditionally upon rust compiler version and environment"
repository = "https://github.com/starkat99/cargo-when.git"
homepage = "https://github.com/starkat99/cargo-when"
readme = "README.md"
keywords = ["cargo"]
license = "MIT/Apache-2.0"

[dependencies]
clap = "2.10"
semver = "0.2.3"
